--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <body style="background: #353453; display: flex;">
-  <img src="logo/logo_white_path.svg" style="opacity: .9;margin: 0 auto;">
+<img src="logo/logo_white_path.svg" style="opacity: .9;margin: 0 auto;width: 50vw;max-height: 250px;">
 </body>
