--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <body style="background: #353453; display: flex;flex-direction: column;">
   <img src="logo/logo_white_path.svg" style="opacity: .9;margin: 0 auto;width: 50vw;max-height: 250px;">
-  <div style="margin: 30px;color: white;font-family: monospace;font-size: 18px;">
+  <article style="max-width: 640px;margin: 30px auto;color: white;font-family: monospace;font-size: 18px;">
+  <div>
     <p>LOOKALIVE is a new method for composing programs that return structured data as JSON, XML, or HTML. It can be used to define API endpoints, perform mail merges, and create document templates for reports and web pages.
-    <p>Because lookalive programs are valid JSON files, you can write the structure that you want and weave in the results of function calls embedded in this structure. This can make it easy to know what a program does at a glance, without interpreting traditional source code line by line trying to keep track of what will end up happening.
+    </p>
+    <p>Because lookalive programs are valid JSON files, you can write the structure that you want and weave in the results of function calls embedded in this structure. This can make it easy to know what a program does by glancing over the code, without interpreting traditional source code line by line trying to keep track of what will end up happening.
+    </p>
   </div>
+  <img src="img/hypo.gif" style="width: 100%;max-width: 640px;margin: 0 auto;">
+  </article>
 </body>
