--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <body style="background: #353453; display: flex;flex-direction: column;">
-  <img src="logo/logo_white_path.svg" style="opacity: .9;margin: 0 auto;width: 50vw;max-height: 250px;">
-  <article style="max-width: 640px;margin: 30px auto;color: white;font-family: monospace;font-size: 18px;text-align: justify;">
+  <style>
+    img {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    img #logo {
+      opacity: 0.9;margin: 0 auto;width: 50vw;max-height: 250px;
+    }
+    article {
+      max-width: 640px;margin: 30px auto;color: white;font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;font-size: 18px;text-align: justify;
+    }
+    article p span {
+      font-family: monospace;
+      background: white;
+      color: #353453;
+      opacity: 0.9;
+      padding: 2px;
+    }
+  </style>
+  <img id="logo" src="logo/logo_white_path.svg">
+  <article>
     <div>
       <p>LOOKALIVE is a new method for composing programs that return structured data as JSON, XML, or HTML. It can be used to define API endpoints, perform mail merges, and create document templates for reports and web pages.
       </p>
       <p>Because lookalive programs are valid JSON files, you can write the structure that you want and weave in the results of function calls embedded in this structure. This can make it easy to know what a program does by glancing over the code, without interpreting traditional source code line by line trying to keep track of what will end up happening.
       </p>
-      <p> It works by interpreting a JSON file as a dependency graph: any key or value that starts with #!, #&, #?, or #= represent some action that must take place before the program is complete. As a first example, Hello World is the result of a <span>#!join</span> of 3 elements, but before performing this join, <span>#& name</span> is replaced with <span> everyone </span> and now the JOIN function can be completed.
+      <p> It works by interpreting a JSON file as a dependency graph: any key or value that starts with <span>#!</span>, <span>#&</span>, <span>#?</span>, or <span>#=</span> represent some action that must take place before the program is complete. As a first example, Hello World is the result of a <span>#!join</span> of 3 elements, but before performing this join, <span>#& name</span> is replaced with <span>everyone</span> and now the join function can be completed.
       </p>
     </div>
-    <img src="img/hello.gif" style="width: 100%;">
+    <img src="img/hello.gif"">
     <div>
-      <p>Math is performed in polish notation, with the name of an operator followed by its arguments, in this case <span> 0 </span> refers to the '0th' argument passed by command line and once the variable names are resolved the program is equivelant to <span> (* 12 12) </span>.
+      <p>Math is performed in polish notation, with the name of an operator followed by its arguments, in this case <span>0</span> refers to the '0th' argument passed by command line and once the variable names are resolved the program is equivelant to <span>(* 12 12)</span>.
       </p>
       <p>The string <span>"#!product 12 12"</span> replaces itself with the number 144, which on its own is still a valid JSON document.
       </p>
     </div>
-    <img src="img/square.gif" style="width: 100%;">
+    <img src="img/square.gif">
     <div>
       <p>LOOKALIVE becomes more useful in less trivial examples, where stepping through the execution of a program shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming which is usually very tricky to think about becames a matter of declaring a depedency tree, "this function call relies on this variable", and everything happens as soon as its dependencies are resolved.
       </p>
-      <p> Here, the references to the 'side' and 'base' variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
+      <p> Here, the references to the <span>side</span> and </span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
       </p>
     </div>
-    <img src="img/hypo.gif" style="width: 100%;">
+    <img src="img/hypo.gif">
     <div>
-      LOOKALIVE is in development. A first release will use functions written in NodeJS, but WebAssembly will allow the JSON file to refer to functions written in a variety of langauges, such as C, Rust, Go, and Java. LOOKALIVE doesn't need to know what happens inside the function calls, it merely keeps track of what variables to pass to the function and what the function returns. In this way, it can be used to build sophisticated tools out of simple machines.
+      <p> LOOKALIVE is in development. A first release will use functions written in NodeJS, but WebAssembly will allow the JSON file to refer to functions written in a variety of langauges, such as C, Rust, Go, and Java. LOOKALIVE doesn't need to know what happens inside the function calls, it merely keeps track of what variables to pass to the function and what the function returns. In this way, it can be used to build sophisticated tools out of simple machines.
+     </p>
     </div>
   </article>
 </body>
