--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       width: 100%;
       margin-bottom: 10px;
     }
-    img #logo {
+    img#logo {
       opacity: 0.9;margin: 0 auto;width: 50vw;max-height: 250px;
     }
     article {
@@ -39,7 +39,7 @@
     <div>
       <p>LOOKALIVE becomes more useful in less trivial examples, where stepping through the execution of a program shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming which is usually very tricky to think about becames a matter of declaring a depedency tree, "this function call relies on this variable", and everything happens as soon as its dependencies are resolved.
       </p>
-      <p> Here, the references to the <span>side</span> and </span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
+      <p> Here, the references to the <span>side</span> and <span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
       </p>
     </div>
     <img src="img/hypo.gif">
