--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <img src="img/multiply.png">
-    <img src="img/multiply_gui.png">
+    <img src="img/multiply_gui.gif">
     <div>
       <p>LOOKALIVE becomes more useful in less trivial examples, where stepping through the execution of a program shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming which is usually very tricky to think about becames a matter of declaring a depedency tree, "this function call relies on this variable", and everything happens as soon as its dependencies are resolved.
       </p>
