--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p> Here, the references to the <span>side</span> and <span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
       </p>
     </div>
-    <img src="img/hypo.png">
+    <img src="img/hypo_multiply.png">
     <img src="img/hypo_gui.gif">
     <div>
       <p> LOOKALIVE is in development. A first release will use functions written in NodeJS, but WebAssembly will allow the JSON file to refer to functions written in a variety of langauges, such as C, Rust, Go, and Java. LOOKALIVE doesn't need to know what happens inside the function calls, it merely keeps track of what variables to pass to the function and what the function returns. In this way, it can be used to build sophisticated tools out of simple machines.
