--- a/index.html
+++ b/index.html
@@ -51,5 +51,7 @@
       <p> LOOKALIVE is in development. A first release will use functions written in NodeJS, but WebAssembly will allow the JSON file to refer to functions written in a variety of langauges, such as C, Rust, Go, and Java. LOOKALIVE doesn't need to know what happens inside the function calls, it merely keeps track of what variables to pass to the function and what the function returns. In this way, it can be used to build sophisticated tools out of simple machines.
      </p>
     </div>
+    <img src="img/hypo_cjk.png">
+    <img src="img/hypo_cjk_gui.gif">
   </article>
 </body>
