--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       padding: 2px;
     }
   </style>
-  <img id="logo" src="logo/logo_white_path.svg">
+  <img id="logo" src="logo/ready_ani_white.svg">
   <article>
     <div>
-      <p>LOOKALIVE is a new method for composing programs that return structured data as JSON, XML, or HTML. It can be used to define API endpoints, perform mail merges, and create document templates for reports and web pages.
+      <p>LOOKALIVE is a high-level programming language designed to make the output of a program and its order-of-operations as self-evident as possible.
       </p>
       <p>Because lookalive programs are valid JSON files, you can write the structure that you want and weave in the results of function calls embedded in this structure. This can make it easy to know what a program does by glancing over the code, without interpreting traditional source code line by line trying to keep track of what will end up happening.
       </p>
