--- a/index.html
+++ b/index.html
@@ -21,28 +21,27 @@
   </style>
   <img id="logo" src="logo/ready_ani_white.svg">
   <article>
-    <div>
-      <p>LOOKALIVE is a high-level programming language designed to make the output of a program and its order-of-operations as self-evident as possible.
-      </p>
-      <p>Because lookalive programs are valid JSON files, you can write the structure that you want and weave in the results of function calls embedded in this structure. This can make it easy to know what a program does by glancing over the code, without interpreting traditional source code line by line trying to keep track of what will end up happening.
-      </p>
-      <p> It works by interpreting a JSON file as a dependency graph: any key or value that starts with <span>#!</span>, <span>#&</span>, <span>#?</span>, or <span>#=</span> represent some action that must take place before the program is complete. As a first example, Hello World is the result of a <span>#!join</span> of 3 elements, but before performing this join, <span>#& name</span> is replaced with <span>everyone</span> and now the join function can be completed.
-      </p>
+  <div>
+      <p>LOOKALIVE is a minimalist approach to software development where programs transform themselves into their resulting data structures.</p>
+      <p>Standard JSON syntax is used to arrange text, numbers, lists and dictionaries. Substitutions are made wherever one of the following symbols occur:</p>
+      <p><span>#!</span> 'call' is replaced with the result of a function call</p>
+      <p><span>#&amp;</span> 'reference' is replaced with the value of a local variable</p>
+      <p><span>#?</span> 'maybe' checks a list of possible replacements and fall-backs<br></p>
+      <p><span>#=</span> 'assign' gives names to values for referencing later in the program</p>
+      <p>LOOKALIVE can call out to any other programs so long as input and output are handled as valid JSON. In the following example, the <span>join</span> program takes a list of strings and returns its greeting as a single string.</p>
     </div>
     <img src="img/helloname.png">
     <img src="img/hello_gui.gif">
     <div>
-      <p>Math is performed in polish notation, with the name of an operator followed by its arguments, in this case <span>0</span> refers to the '0th' argument passed by command line and once the variable names are resolved the program is equivelant to <span>(* 12 12)</span>.
-      </p>
-      <p>The string <span>"#!product 12 12"</span> replaces itself with the number 144, which on its own is still a valid JSON document.
+      <p>On the left is the original program in JSON format, and on the right is a visual step-by-step expansion of the program execution. Being able to step through each transformation of the complete data structure is LOOKALIVE's essential feature for beginners just learning to code as well as experts trying to understand complex transformations.</p>
+      <p>The next example uses a shorthand for passing arguments to multiply, which takes a list of numbers and returns their product. If the program is executed with a single argument of '12', the program becomes '#!multiply 12 12', which replaces itself with the number 144, which on its own is still a valid JSON document.
       </p>
     </div>
     <img src="img/multiply.png">
     <img src="img/multiply_gui.gif">
     <div>
-      <p>LOOKALIVE becomes more useful in less trivial examples, where stepping through the execution of a program shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming which is usually very tricky to think about becames a matter of declaring a depedency tree, "this function call relies on this variable", and everything happens as soon as its dependencies are resolved.
-      </p>
-      <p> Here, the references to the <span>side</span> and <span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined once the math is completed.
+      <p>In larger programs, stepping through the transformations shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming in other languages can be difficult to plan and debug, everything that is able to be completed is executed in paralell, and anything that is waiting on a value is completed as soon as the value is available. </p>
+      <p> Here, the references to the <span>side</span> and <span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined after all steps of the math are completed in order.
       </p>
     </div>
     <img src="img/hypo_multiply.png">
