--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <img src="img/multiply.png">
     <img src="img/multiply_gui.gif">
     <div>
-      <p>In larger programs, stepping through the transformations shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming in other languages can be difficult to plan and debug, everything that is able to be completed is executed in paralell, and anything that is waiting on a value is completed as soon as the value is available. </p>
+      <p>In larger programs, stepping through the transformations shows what operations can be done in parallel and what functions are waiting for others to complete. Parallel and Asynchronous programming in other languages can be difficult to plan and debug, but with LOOKALIVE, everything that has the data it needs to compute will be executed in paralell, and anything that is waiting on a value (whether its a computationally intensive task or a slow network request) will be completed as soon as the value becomes available. </p>
       <p> Here, the references to the <span>side</span> and <span>base</span> variables are resolved simultaneously, and the sentence "A triangle with side of 3 and base of 4 has a hypotenuse of 5" is joined after all steps of the math are completed in order.
       </p>
     </div>
