--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <div>
       <p> LOOKALIVE is in development. A first release will use functions written in NodeJS, but WebAssembly will allow the JSON file to refer to functions written in a variety of langauges, such as C, Rust, Go, and Java. LOOKALIVE doesn't need to know what happens inside the function calls, it merely keeps track of what variables to pass to the function and what the function returns. In this way, it can be used to build sophisticated tools out of simple machines.
      </p>
+      <p> BONUS: Because there are no keywords in the LOOKALIVE language, all function and reference names are user-defined, so programs can be written in a programmers native language. Right-To-Left and Top-To-Bottom scripts will be supported, as seen in this mockup of the above program in google-translated-japanese:
+      </p>
     </div>
     <img src="img/hypo_cjk_sideways.png">
     <img src="img/hypo_cjk_gui.gif">
