--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>Standard JSON syntax is used to arrange text, numbers, lists and dictionaries. Substitutions are made wherever one of the following symbols occur:</p>
       <p><span>#!</span> 'Solve' is replaced with the result of a function call</p>
       <p><span>#&amp;</span> 'Substitute' is replaced with the value of a local variable</p>
-      <p><span>#?</span> 'Query' returns any non-null results from a list of operations, or a default value</p>
+      <p><span>#?</span> 'Query' returns any non-null results from a list of operations</p>
       <p><span>#=</span> 'Define' gives names to values for referencing later in the program</p>
       <p>LOOKALIVE can call out to any other programs so long as input and output are handled as valid JSON. In the following example, the <span>join</span> program takes a list of strings and returns its greeting as a single string.</p>
     </div>
